SteveHorses OLD/Steve PRO OLD/SteveHorsesPro_fix_20250918_003525/logs/run_20250901_021738_targets.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 176
    name = f\"#{clean(h['num'])} {clean(h['name'])}\"
                                                    ^
SyntaxError: unexpected character after line continuation character
